--- a/docs/source/requirements.txt
+++ b/docs/source/requirements.txt
@@ -56,3 +56,6 @@ sphinxcontrib-serializinghtml==1.1.5
     # via sphinx
 urllib3==1.26.9
     # via requests
+myst_parser==2.0.0
+    # via
+    #   -r docs/requirements.in
