--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,7 @@ docs/.DS_Store
 docs/.DS_Store
 docs/.DS_Store
 docs/.DS_Store
+log/COLCON_IGNORE
+log/latest
+log/latest_list
+src/Readoutunit_single/MagCam_Devboard/.vscode/settings.json
