--- a/src/Readoutunit_single/MagCam_Devboard/platformio.ini
+++ b/src/Readoutunit_single/MagCam_Devboard/platformio.ini
@@ -11,6 +11,7 @@
 [env:disco_f407vg]
 build_flags =   -D VERSION=\"0.0.1\"
                 -D USING_PLATFORMIO=1
+                -D IS_STM32F4_BOARD=1
                 -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
                 -D USBCON
 
