--- a/.github/workflows/sphinx_docs_to_gh_pages.yaml
+++ b/.github/workflows/sphinx_docs_to_gh_pages.yaml
@@ -23,11 +23,11 @@ jobs:
           auto-update-conda: false
           auto-activate-base: false
           show-channel-urls: true
-      - name: Installing the library
-        shell: bash -l {0}
-        run: |
-          cd src/MagneticReadoutProcessing
-          python setup.py install
+      #- name: Installing the library
+      #  shell: bash -l {0}
+      #  run: |
+      #    cd src/MagneticReadoutProcessing
+      #    python setup.py install
       - name: Running the Sphinx to gh-pages Action
         uses: uibcdf/action-sphinx-docs-to-gh-pages@v1.1.0
         with:
