--- a/src/UnifiedMagBoardFirmware/platformio.ini
+++ b/src/UnifiedMagBoardFirmware/platformio.ini
@@ -21,10 +21,20 @@ board = disco_f407vg
 framework = arduino
 debug_tool = jlink
 upload_protocol = jlink
-;monitor_port=/dev/tty.usbmodem3867315334391
 monitor_speed=115200
-;monitor_port=/dev/tty.usbmodem0007792455851
-; upload_protocol = jlink-jtag
-#upload_flags =
-    #-SelectEmuBySN 192.168.178.43
-; debug_port = :2331
+
+
+[env:rp2040]
+build_flags =   -D VERSION=\"0.0.1\"
+                -D USING_PLATFORMIO=1
+                -D IS_RP2040_BOARD
+                -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+                -D LIB_PICO_STDIO_USB
+
+                
+platform = raspberrypi
+board = pico
+framework = arduino
+debug_tool = cmsis-dap
+upload_protocol = picoprobe
+monitor_speed=115200
