first sensor cli

--- a/src/MagneticReadoutProcessing/Dockerfile
+++ b/src/MagneticReadoutProcessing/Dockerfile
@@ -4,8 +4,15 @@ LABEL authors="marcelochsendorf"
 WORKDIR /usr/src/app
 
 COPY requirements.txt ./
+
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD [ "python", "-m ./tests/all_tests.py" ]
+# RUN TESTS BEFORE
+RUN python ./tests/all_tests.py
+
+RUN python ./cli.py --install-completion bash
+#
+ENTRYPOINT [ "python", "./cli.py"]
+#CMD [ "python", "./cli.py" , "--help"]
