--- a/src/UnifiedMagBoardFirmware/platformio.ini
+++ b/src/UnifiedMagBoardFirmware/platformio.ini
@@ -36,5 +36,5 @@ platform = raspberrypi
 board = pico
 framework = arduino
 debug_tool = cmsis-dap
-upload_protocol = picoprobe
+upload_protocol = cmsis-dap
 monitor_speed=115200
