--- a/src/MagneticReadoutProcessing/pipelines/generate_temperature_calibration_reading.yaml
+++ b/src/MagneticReadoutProcessing/pipelines/generate_temperature_calibration_reading.yaml
@@ -6,10 +6,10 @@ settings:
 
 stage import_readings:
   function: import_readings
+  main: true
   parameters:
     input_folder: tlv493d_N45_12x12x12
     regex: (.)*.mag.json
-    recursive: false
 
 #stage plot1:
 #  function: plot_error
