--- a/documentation/thesis/deploly_server/docker-compose_deployserver.yaml
+++ b/documentation/thesis/deploly_server/docker-compose_deployserver.yaml
@@ -1,9 +1,7 @@
 services:
   mrptheis:
     image: docker.io/library/mrpthesisdeployserver:latest
-    container_name: docker.io/library/mrpthesisdeployserver:latest
-    build: 
-      context: .
-      dockerfile: Dockerfile
+    container_name: mrpthesisdeployserver
+    build: .
     ports:
       - "8081:80"
