--- a/src/MagneticReadoutProcessing/pipelines/pipeline_simple.yaml
+++ b/src/MagneticReadoutProcessing/pipelines/pipeline_simple.yaml
@@ -1,7 +1,7 @@
 settings:
   enabled: true
   export_intermediate_results: true
-  name: pipeline
+  name: pipeline_simple
 
 stage import:
   function: import_readings
