--- a/src/MagneticReadoutProcessing/pipelines/pipeline_plot.yaml
+++ b/src/MagneticReadoutProcessing/pipelines/pipeline_plot.yaml
@@ -1,21 +1,51 @@
 settings:
   enabled: true
   export_intermediate_results: true
-  name: pipeline_simple
+  name: pipeline_plot
 
 stage import:
   function: import_readings
   parameters:
     IP_input_folder: ./readings/tlv493d_N45_12x12x12/525771256544952/SENSOR_0/
-#    IP_file_regex: (.)*.mag.json
-#    IP_parse_idx_in_filename: True
 
-stage inspect:
-  function: inspect_readings
+
+
+stage import_bias_reading:
+  function: import_readings
   parameters:
-    readings_to_inspect: stage import
-    IP_export_folder: ./readings/tlv493d_N45_12x12x12/525771256544952/SENSOR_0/reports
+    IP_input_folder: ./readings/tlv493d_offset/
+    IP_file_regex: (.)*SID0.mag.json # use the same sensor id as for the normal readings. so the regex parameter is used
 
+
+
+stage apply_bias_offset:
+  function: apply_sensor_bias_offset
+  parameters:
+    bias_readings: stage import_bias_reading
+    readings_to_calibrate: stage import
+
+stage plot_normal:
+  function: plot_readings
+  parameters:
+    readings_to_plot: stage import
+    IP_export_folder: ./readings/tlv493d_N45_12x12x12/525771256544952/SENSOR_0/plots/normal/
+    IP_plot_headline_prefix:  N45 12x12x12 measurement run overview
+
+
+stage plot_normal_bias_offset:
+  function: plot_readings
+  parameters:
+    readings_to_plot: stage apply_bias_offset
+    IP_export_folder: ./readings/tlv493d_N45_12x12x12/525771256544952/SENSOR_0/plots/calibrated/
+    IP_plot_headline_prefix:  N45 12x12x12 measurement run overview with bias_offset applied
+#stage plot_normal:
+#  function: plot_readings
+#  parameters:
+#    readings_to_plot: stage import
+#    IP_export_folder: ./readings/tlv493d_N45_12x12x12/525771256544952/SENSOR_0/plots
+
+#stage apply_bias:
+#  function:
 
 #stage inspect:
 #  function: inspect_readings
