--- a/src/MagneticReadoutProcessing/pipelines/pipeline_simple.yaml
+++ b/src/MagneticReadoutProcessing/pipelines/pipeline_simple.yaml
@@ -1,5 +1,5 @@
 settings:
-  enabled: true
+  enabled: false
   export_intermediate_results: true
   name: pipeline_simple
 
@@ -7,13 +7,12 @@ stage import:
   function: import_readings
   parameters:
     IP_input_folder: ./readings/tlv493d_N45_12x12x12/525771256544952/SENSOR_0/
-
+#    IP_file_regex: (.)*.mag.json
+#    IP_parse_idx_in_filename: True
 
 stage inspect:
   function: inspect_readings
   parameters:
-    readings: stage import
-
-
-
-
+    readings_to_inspect: stage import
+    IP_export_folder: ./readings/tlv493d_N45_12x12x12/525771256544952/SENSOR_0/reports
+    IP_log_to_std: False
