--- a/src/MagneticReadoutProcessing/pipelines/pipeline_plot.yaml
+++ b/src/MagneticReadoutProcessing/pipelines/pipeline_plot.yaml
@@ -1,6 +1,6 @@
 settings:
-  enabled: true
-  export_intermediate_results: true
+  enabled: false
+  export_intermediate_results: false
   name: pipeline_plot
 
 stage import:
