--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -24,8 +24,8 @@ sphinx:
 #    - pdf
 
 # Optionally declare the Python requirements required to build your docs
-python:
-   install:
-   - requirements: requirements.txt
-   - method: pip
-     path: src/MagneticReadoutProcessing/docs/source
+#python:
+#   install:
+#   - requirements: requirements.txt
+#   - method: pip
+#     path: src/MagneticReadoutProcessing/docs/source
