--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -2,8 +2,11 @@ name: Publish Python distributions to PyPI
 
 on:
   push:
-    tags:
-     - '*'
+    branches:
+      - main
+    #tags:
+    # - '*'
+
 
 jobs:
   build-n-publish:
