--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -18,6 +18,7 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.10'
+        
     - name: Install pypa/setuptools
       run: >-
         python -m
@@ -25,13 +26,16 @@ jobs:
     - name: Extract tag name
       id: tag
       run: echo ::set-output name=TAG_NAME::$(echo $GITHUB_REF | cut -d / -f 3)
+      
     - name: Update version in setup.py
       run: >-
-        sed -i "s/{{VERSION_PLACEHOLDER}}/${{ steps.tag.outputs.TAG_NAME }}/g" setup.py
+        sed -i "s/{{VERSION_PLACEHOLDER}}/${{ steps.tag.outputs.TAG_NAME }}/g" setup.py || true
+        
     - name: Build a binary wheel
       run: >-
         python setup.py sdist bdist_wheel
-    - name: Publish distribution 📦 to PyPI
+        
+    - name: Publish distribution to PyPI
       uses: pypa/gh-action-pypi-publish@master
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
