--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -28,10 +28,12 @@ jobs:
       run: echo ::set-output name=TAG_NAME::$(echo $GITHUB_REF | cut -d / -f 3)
       
     - name: Update version in setup.py
+      working-directory: ./src/MagneticReadoutProcessing
       run: >-
         sed -i "s/{{VERSION_PLACEHOLDER}}/${{ steps.tag.outputs.TAG_NAME }}/g" setup.py || true
         
     - name: Build a binary wheel
+      working-directory: ./src/MagneticReadoutProcessing
       run: >-
         python setup.py sdist bdist_wheel
         
