--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -38,6 +38,7 @@ jobs:
         python setup.py sdist bdist_wheel
         
     - name: Publish distribution to PyPI
+      working-directory: ./src/MagneticReadoutProcessing
       uses: pypa/gh-action-pypi-publish@master
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
