--- a/src/MagneticReadoutProcessing/setup.cfg
+++ b/src/MagneticReadoutProcessing/setup.cfg
@@ -1,2 +1,7 @@
 [options]
 install_requires = file: requirements.txt
+
+[options.entry_points]
+console_scripts =
+    MRPCli = MRPcli:main
+    MRPUDPP = MRPudpp:main
