--- a/src/MagneticReadoutProcessing/pyproject.toml
+++ b/src/MagneticReadoutProcessing/pyproject.toml
@@ -17,6 +17,14 @@ classifiers = [
 MRPCli = "MRPcli.cli:run"
 MRPUdpp = "MRPudpp.udpp:run"
 
+[tool.setuptools.packages.find]
+where = ["pipelines", "readings", "static", "templates"]
+
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.package-data]
+"*" = ["*.mag.json", "*.yaml", "*.html", "*.js", "*.css", "*.md", "*.json", "*.ts", "*.xml"]
 
 [project.urls]
 "Homepage" = "https://github.com/LFB-MRI/MagneticReadoutProcessing"
