--- a/src/MagneticReadoutProcessing/setup.cfg
+++ b/src/MagneticReadoutProcessing/setup.cfg
@@ -1,5 +1,20 @@
 [options]
 install_requires = file: requirements.txt
+include_package_data = True
+packages = find:
+python_requires = >=3.7
+
+[options.package_data]
+* =
+    *.mag.json
+    *.yaml
+    *.html
+    *.js
+    *.css
+    *.md
+    *.json
+    *.ts
+    *.xml
 
 [options.entry_points]
 console_scripts =
