--- a/src/MagneticReadoutProcessing/setup.cfg
+++ b/src/MagneticReadoutProcessing/setup.cfg
@@ -1,7 +1,23 @@
+[metadata]
+name = MagneticReadoutProcessing
+version = 1.3.2
+author = Marcel Ochsendorf
+author_email = info@marcelochsendorf.com
+description = This library was created for the Low-Field MRI project and allows processing of data measured by magnetic field sensors. The focus is on visualization, followed by the provision of simple interfaces to work with this data. In general its possible to use this lib on all kinds of sensor data.
+long_description = file: README.md
+keywords = one, two
+license = Apache 2
+classifiers =
+    Programming Language :: Python :: 3
+
+
 [options]
 install_requires = file: requirements.txt
 include_package_data = True
-packages = find:
+packages =  MRP
+            MRPcli
+            MRPudpp
+
 python_requires = >=3.7
 
 [options.package_data]
