--- a/src/MagneticReadoutProcessing/setup.cfg
+++ b/src/MagneticReadoutProcessing/setup.cfg
@@ -22,17 +22,17 @@ python_requires = >=3.7
 
 [options.package_data]
 * =
-    *.mag.json
-    *.yaml
-    *.html
-    *.js
-    *.css
-    *.md
-    *.json
-    *.ts
-    *.xml
+    **/*.mag.json
+    **/*.yaml
+    **/*.html
+    **/*.js
+    **/*.css
+    **/*.md
+    **/*.json
+    **/*.ts
+    **/*.xml
 
 [options.entry_points]
 console_scripts =
     MRPCli = MRPcli:main
-    MRPUDPP = MRPudpp:main
+    MRPUdpp = MRPudpp:main
