working on rotational sensor api
.

--- a/src/MagneticReadoutProcessing/setup.cfg
+++ b/src/MagneticReadoutProcessing/setup.cfg
@@ -36,3 +36,4 @@ python_requires = >=3.7
 console_scripts =
     MRPCli = MRPcli:main
     MRPUdpp = MRPudpp:main
+    MRPRsp = MRPRotationalSensorProxy:main'
