--- a/src/MagneticReadoutProcessing/setup.cfg
+++ b/src/MagneticReadoutProcessing/setup.cfg
@@ -17,6 +17,7 @@ include_package_data = True
 packages =  MRP
             MRPcli
             MRPudpp
+            MRPproxy
 
 python_requires = >=3.7
 
@@ -36,4 +37,4 @@ python_requires = >=3.7
 console_scripts =
     MRPCli = MRPcli:main
     MRPUdpp = MRPudpp:main
-    MRPRsp = MRPRotationalSensorProxy:main'
+    MRPProxy = MRPproxy:main'
