--- a/src/UnifiedMagBoardFirmware/platformio.ini
+++ b/src/UnifiedMagBoardFirmware/platformio.ini
@@ -1,13 +1,3 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:disco_f407vg]
 build_flags =   -D VERSION=\"0.0.1\"
                 -D USING_PLATFORMIO=1
@@ -31,10 +21,16 @@ build_flags =   -D VERSION=\"0.0.1\"
                 -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
                 -D LIB_PICO_STDIO_USB
 
-                
+
+
+
+# sudo openocd -f interface/cmsis-dap.cfg -c "transport select swd" -c "adapter speed 4000" -f target/rp2040-core0.cfg
+         
 platform = raspberrypi
 board = pico
 framework = arduino
-debug_tool = cmsis-dap
 upload_protocol = cmsis-dap
+debug_tool = cmsis-dap
+debug_speed = 4000
 monitor_speed=115200
+#debug_init_break = tbreak
