--- a/.gitignore
+++ b/.gitignore
@@ -204,3 +204,5 @@ src/Readoutunit_single/MagCam_Devboard/.vscode/settings.json
 documentation/thesis/thesis_document_tmp.md.listings
 documentation/thesis/thesis_document_tmp.md.listings
 documentation/thesis/thesis.lol
+*.lol
+*.listings
