--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,4 @@ documentation/thesis/thesis_document_tmp.md.listings
 documentation/thesis/thesis.lol
 *.lol
 *.listings
+src/MagneticReadoutProcessing/.idea/other.xml
