--- a/src/MagneticReadoutProcessing/pipelines/examples/pipeline_analyse_fullsphere.yaml
+++ b/src/MagneticReadoutProcessing/pipelines/examples/pipeline_analyse_fullsphere.yaml
@@ -6,7 +6,7 @@ settings:
 stage import:
   function: import_readings
   parameters:
-    IP_input_folder: ./readings/fullsphere/
+    IP_input_folder: ./readings/_fullsphere/
     IP_file_regex: 360_(.)*.mag.json
 
 
@@ -14,7 +14,7 @@ stage import:
 stage import_bias_reading:
   function: import_readings
   parameters:
-    IP_input_folder: ./readings/fullsphere/
+    IP_input_folder: ./readings/_fullsphere/
     IP_file_regex: BIAS_(.)*.mag.json
 
 
@@ -30,12 +30,12 @@ stage plot_normal_bias_offset:
   function: plot_readings
   parameters:
     readings_to_plot: stage apply_bias_offset
-    IP_export_folder: ./readings/fullsphere/plots/normal/calibrated/
+    IP_export_folder: ./readings/_fullsphere/plots/normal/calibrated/
     IP_plot_headline_prefix:  Sample N45 12x12x12 magnets calibrated
 
 stage plot_fullsphere:
   function: plot_fullsphere
   parameters:
     readings_to_plot: stage apply_bias_offset
-    IP_export_folder: ./readings/fullsphere/plots/normal/calibrated/
+    IP_export_folder: ./readings/_fullsphere/plots/normal/calibrated/
     IP_plot_headline_prefix:  Sample N45 12x12x12 magnets calibrated
