--- a/.gitignore
+++ b/.gitignore
@@ -207,3 +207,5 @@ documentation/thesis/thesis.lol
 *.lol
 *.listings
 src/MagneticReadoutProcessing/.idea/other.xml
+documentation/thesis/thesis.lol
+*.lol
