--- a/src/UnifiedMagBoardFirmware/platformio.ini
+++ b/src/UnifiedMagBoardFirmware/platformio.ini
@@ -25,9 +25,11 @@ upload_protocol = cmsis-dap
 debug_tool = cmsis-dap
 debug_speed = 4000
 monitor_speed=115200
-#debug_init_break = tbreak
-
-
+debug_init_break = tbreak
+platform_packages = tool-openocd@~2.1000.0
+#debug_server = ${platformio.packages_dir}/tool-openocd/openocd ${platformio.packages_dir}/tool-openocd/target/rp2040.cfg
+debug_server = openocd -f interface/cmsis-dap.cfg -c "transport select swd" -c "adapter speed 4000" -c 'set USE_CORE 0' -f target/rp2040.cfg
+#-f interface/cmsis-dap.cfg -c "transport select swd" -c "adapter speed 4000" -c 'set USE_CORE 0' -f target/rp2040.cfg
 
 # sudo openocd -f interface/cmsis-dap.cfg -c "transport select swd" -c "adapter speed 4000" -f target/rp2040-core0.cfg
-         
+# sudo openocd -f interface/cmsis-dap.cfg -c "transport select swd" -c "adapter speed 4000" -c 'set USE_CORE 0' -f target/rp2040.cfg         
