--- a/src/UnifiedMagBoardFirmware/platformio.ini
+++ b/src/UnifiedMagBoardFirmware/platformio.ini
@@ -1,5 +1,5 @@
 [env:disco_f407vg]
-build_flags =   -D VERSION=\"0.0.1\"
+build_flags =   -D VERSION=\"2.0.0\"
                 -D USING_PLATFORMIO=1
                 -D IS_STM32F4_BOARD=1
                 -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
@@ -13,7 +13,7 @@ monitor_speed=115200
 
 
 [env:rp2040]
-build_flags =   -D VERSION=\"0.0.1\"
+build_flags =   -D VERSION=\"2.0.0\"
                 -D USING_PLATFORMIO=1
                 -D IS_RP2040_BOARD
                 -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
@@ -33,3 +33,37 @@ debug_server = openocd -f interface/cmsis-dap.cfg -c "transport select swd" -c "
 
 # sudo openocd -f interface/cmsis-dap.cfg -c "transport select swd" -c "adapter speed 4000" -f target/rp2040-core0.cfg
 # sudo openocd -f interface/cmsis-dap.cfg -c "transport select swd" -c "adapter speed 4000" -c 'set USE_CORE 0' -f target/rp2040.cfg         
+
+[env:rp2040_segger]
+build_flags =   -D VERSION=\"2.0.0\"
+                -D USING_PLATFORMIO=1
+                -D IS_RP2040_BOARD
+                -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+                -D LIB_PICO_STDIO_USB
+platform = raspberrypi
+board = pico
+framework = arduino
+upload_protocol = jlink
+debug_tool = jlink
+#debug_speed = 4000
+monitor_speed=115200
+debug_init_break = tbreak
+
+debug_port = :2331
+
+
+[env:rp2040_segger_simple]
+build_flags =   -D VERSION=\"2.0.0\"
+                -D USING_PLATFORMIO=1
+                -D IS_RP2040_BOARD
+                -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+                -D LIB_PICO_STDIO_USB
+platform = raspberrypi
+board = pico
+framework = arduino
+upload_protocol = jlink
+debug_tool = jlink
+monitor_speed=115200
+debug_init_break = tbreak
+platform_packages = tool-openocd@~2.1000.0
+debug_port = 3333
