ufw 2.5.1 with hardware averaging enabled

--- a/src/UnifiedMagBoardFirmware/.vscode/settings.json
+++ b/src/UnifiedMagBoardFirmware/.vscode/settings.json
@@ -26,6 +26,8 @@
         "vector": "cpp",
         "string_view": "cpp",
         "initializer_list": "cpp",
-        "ranges": "cpp"
+        "ranges": "cpp",
+        "utility": "cpp",
+        "functional": "cpp"
     }
 }
