--- a/src/UnifiedMagBoardFirmware/platformio.ini
+++ b/src/UnifiedMagBoardFirmware/platformio.ini
@@ -1,69 +1,50 @@
-[env:disco_f407vg]
-build_flags =   -D VERSION=\"2.0.0\"
+[env]
+build_flags =   -D VERSION=\"2.5.1\"
                 -D USING_PLATFORMIO=1
-                -D IS_STM32F4_BOARD=1
+                -D ENABLE_HARDWARE_AVERAGING
+monitor_speed=115200
+debug_init_break = tbreak
+
+
+
+framework = arduino
+[env:disco_f407vg_jlink]
+build_flags =   -D IS_STM32F4_BOARD=1
                 -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
                 -D USBCON          
 platform = ststm32
 board = disco_f407vg
-framework = arduino
 debug_tool = jlink
 upload_protocol = jlink
-monitor_speed=115200
 
 
-[env:rp2040]
-build_flags =   -D VERSION=\"2.0.0\"
-                -D USING_PLATFORMIO=1
-                -D IS_RP2040_BOARD
+[env:rp2040_cmsis]
+build_flags =   -D IS_RP2040_BOARD
                 -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
                 -D LIB_PICO_STDIO_USB
 platform = raspberrypi
 board = pico
-framework = arduino
 upload_protocol = cmsis-dap
 debug_tool = cmsis-dap
 debug_speed = 4000
-monitor_speed=115200
-debug_init_break = tbreak
 platform_packages = tool-openocd@~2.1000.0
 #debug_server = ${platformio.packages_dir}/tool-openocd/openocd ${platformio.packages_dir}/tool-openocd/target/rp2040.cfg
 debug_server = openocd -f interface/cmsis-dap.cfg -c "transport select swd" -c "adapter speed 4000" -c 'set USE_CORE 0' -f target/rp2040.cfg
 #-f interface/cmsis-dap.cfg -c "transport select swd" -c "adapter speed 4000" -c 'set USE_CORE 0' -f target/rp2040.cfg
-
 # sudo openocd -f interface/cmsis-dap.cfg -c "transport select swd" -c "adapter speed 4000" -f target/rp2040-core0.cfg
 # sudo openocd -f interface/cmsis-dap.cfg -c "transport select swd" -c "adapter speed 4000" -c 'set USE_CORE 0' -f target/rp2040.cfg         
 
-[env:rp2040_segger]
-build_flags =   -D VERSION=\"2.0.0\"
+
+
+
+[env:rp2040_jlink]
+build_flags =   -D VERSION=\"3.0.0\"
                 -D USING_PLATFORMIO=1
                 -D IS_RP2040_BOARD
                 -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
                 -D LIB_PICO_STDIO_USB
 platform = raspberrypi
 board = pico
-framework = arduino
 upload_protocol = jlink
 debug_tool = jlink
-#debug_speed = 4000
-monitor_speed=115200
-debug_init_break = tbreak
-
-debug_port = :2331
-
-
-[env:rp2040_segger_simple]
-build_flags =   -D VERSION=\"2.0.0\"
-                -D USING_PLATFORMIO=1
-                -D IS_RP2040_BOARD
-                -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
-                -D LIB_PICO_STDIO_USB
-platform = raspberrypi
-board = pico
-framework = arduino
-upload_protocol = jlink
-debug_tool = jlink
-monitor_speed=115200
-debug_init_break = tbreak
 platform_packages = tool-openocd@~2.1000.0
-debug_port = 3333
