--- a/src/UnifiedMagBoardFirmware/platformio.ini
+++ b/src/UnifiedMagBoardFirmware/platformio.ini
@@ -1,7 +1,7 @@
 [env]
 build_flags =   -D VERSION=\"2.5.1\"
                 -D USING_PLATFORMIO=1
-                -D ENABLE_HARDWARE_AVERAGING
+                #-D ENABLE_HARDWARE_AVERAGING
 monitor_speed=115200
 debug_init_break = tbreak
 
