--- a/documentation/colloquium/demo/pipelines/pipeline_minimal.yaml
+++ b/documentation/colloquium/demo/pipelines/pipeline_minimal.yaml
@@ -1,5 +1,5 @@
 settings:
-  enabled: false
+  enabled: true
   export_intermediate_results: false
   name: pipeline_minimal
   additional_custom_modules: []
