--- a/documentation/colloquium/demo/pipelines/pipeline_bias.yaml
+++ b/documentation/colloquium/demo/pipelines/pipeline_bias.yaml
@@ -1,5 +1,5 @@
 settings:
-  enabled: true
+  enabled: false
   export_intermediate_results: false
   name: pipeline_bias
   additional_custom_modules: []
