--- a/documentation/colloquium/demo/pipelines/pipeline_filter.yaml
+++ b/documentation/colloquium/demo/pipelines/pipeline_filter.yaml
@@ -1,5 +1,5 @@
 settings:
-  enabled: true
+  enabled: false
   export_intermediate_results: false
   name: pipeline_filter
   additional_custom_modules:
