added user button to trigger reading

--- a/src/UnifiedMagBoardFirmware/platformio.ini
+++ b/src/UnifiedMagBoardFirmware/platformio.ini
@@ -1,5 +1,5 @@
 [env]
-build_flags =   -D VERSION=\"2.5.1\"
+build_flags =   -D VERSION=\"3.0.1\"
                 -D USING_PLATFORMIO=1
                 #-D ENABLE_HARDWARE_AVERAGING
 monitor_speed=115200
@@ -9,7 +9,8 @@ debug_init_break = tbreak
 
 framework = arduino
 [env:disco_f407vg_jlink]
-build_flags =   -D IS_STM32F4_BOARD=1
+build_flags =   -D VERSION=\"3.0.1\"
+                -D IS_STM32F4_BOARD=1
                 -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
                 -D USBCON          
 platform = ststm32
@@ -19,7 +20,8 @@ upload_protocol = jlink
 
 
 [env:rp2040_cmsis]
-build_flags =   -D IS_RP2040_BOARD
+build_flags =   -D VERSION=\"3.0.1\"
+                -D IS_RP2040_BOARD
                 -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
                 -D LIB_PICO_STDIO_USB
 platform = raspberrypi
@@ -38,7 +40,7 @@ debug_server = openocd -f interface/cmsis-dap.cfg -c "transport select swd" -c "
 
 
 [env:rp2040_jlink]
-build_flags =   -D VERSION=\"3.0.0\"
+build_flags =   -D VERSION=\"3.0.1\"
                 -D USING_PLATFORMIO=1
                 -D IS_RP2040_BOARD
                 -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
@@ -48,3 +50,13 @@ board = pico
 upload_protocol = jlink
 debug_tool = jlink
 platform_packages = tool-openocd@~2.1000.0
+
+[env:rp2040]
+build_flags =   -D VERSION=\"3.0.1\"
+                -D USING_PLATFORMIO=1
+                -D IS_RP2040_BOARD
+                -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+                -D LIB_PICO_STDIO_USB
+platform = raspberrypi
+board = pico
+upload_protocol = picotool
